Fixing the spacing of the elements.

--- a/src/app/servers/servers.component.css
+++ b/src/app/servers/servers.component.css
@@ -5,3 +5,6 @@ input{
     width: 40%;
     margin: 0 auto;
 }
+p{
+    margin: 13px;
+}
